# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Hello World App
 # during dev, should point to your local machine
-host: localhost:10010
+host: 175.186.220.45:10010
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -42,8 +42,158 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /swagger:
-    x-swagger-pipe: swagger_raw
+  /assignments:
+    x-swagger-router-controller: assignments
+    get:
+      description: get all assignments involved, ranked by days
+      operationId: listAll
+      parameters:
+      - name: Cookie
+        in: header
+        description: token in cookie
+        type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /assignments/{id}:
+    x-swagger-router-controller: assignments
+    get:
+      description: get a specific assignment
+      operationId: get
+      parameters:
+      - name: id
+        in: path
+        description: assignment id
+        required: true
+        type: string
+      - name: Cookie
+        in: header
+        description: token in cookie
+        type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: remove a specific assignment
+      operationId: remove
+      parameters:
+      - name: id
+        in: path
+        description: assignment id
+        required: true
+        type: string
+      - name: Cookie
+        in: header
+        description: token in cookie
+        type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /assignments/{id}/merge_requests:
+    x-swagger-router-controller: assignments
+    post:
+      description: create MR to submit assignment
+      operationId: submit
+      parameters:
+      - name: id
+        in: path
+        description: assignment id
+        required: true
+        type: string
+      - name: Cookie
+        in: header
+        description: token in cookie
+        type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /users/{id}:
+    x-swagger-router-controller: users
+    get:
+      description: get a specific user
+      operationId: get
+      parameters:
+      - name: id
+        in: path
+        description: user id, user "me" get get current user
+        required: true
+        type: string
+      - name: Cookie
+        in: header
+        description: token in cookie
+        type: string
+        required: true
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /session/login:
+    x-swagger-router-controller: session
+    get:
+      description: Login and set token in cookie
+      operationId: login
+      parameters:
+      - name: username
+        in: query
+        description: Username or Email
+        required: true
+        type: string
+      - name: password
+        in: query
+        description: Password of user
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /session/token_login:
+    x-swagger-router-controller: session
+    get:
+      description: Just set the token in cookie
+      operationId: token_login
+      parameters:
+      - name: token
+        in: query
+        description: token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
@@ -58,3 +208,18 @@ definitions:
     properties:
       message:
         type: string
+  CreateAssignmentRequestBody:
+    required:
+      - name
+      - description
+      - deadline
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+      deadline:
+        type: string
+      import_url:
+        type: string
+
